border radius bigCard and variables added

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -5,22 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/logito.png" type="image/x-icon">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-logo">
-            <button class="hamburger-button">&#9776;</button>
-            <a href="#">Logo</a>
-        </div>
-        <div class="navbar-search">
-            <input type="text" placeholder="Buscar...">
-            <button class="search-button">Buscar</button>
-        </div>
-        <div class="navbar-icons">
-            <button class="cart-button">Carrito</button>
-            <button class="profile-button">Mi Perfil</button>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar">
+            <div class="navbar-logo">
+                <button class="hamburger-button">&#9776;</button>
+                <a href="#">Logo</a>
+            </div>
+            <div class="navbar-search">
+                <input type="text" placeholder="Buscar...">
+                <button class="search-button">Buscar</button>
+            </div>
+            <div class="navbar-icons">
+                <button class="cart-button">Carrito</button>
+                <button class="profile-button">Mi Perfil</button>
+            </div>
+        </nav>
+    </header>
+    <div id="index">
+
+    </div>
     <div class="carousel">
         <div class="card">
             <img src="producto1.jpg" alt="Producto 1">
@@ -217,5 +226,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        
+    </footer>
+    <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 </body>
 </html>
