styles  fotter applied

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -31,7 +31,9 @@
 
     <main/>
     <footer>
-        
+        <div>text of div Lorem, ipsum dolor sit amet con
+            sectetur adipisicing elit. Quasi inventore eos c
+            rat nulla voluptatem assumenda architecto conseq</div>
     </footer>
     <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 </body>
