footer fixed, js spa

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -28,13 +28,13 @@
         </nav>
     </header>
     <main id="index">
-
-    <main/>
+    </main>
     <footer>
         <div>text of div Lorem, ipsum dolor sit amet con
             sectetur adipisicing elit. Quasi inventore eos c
             rat nulla voluptatem assumenda architecto conseq</div>
     </footer>
+    <script src="js/scripts.js"></script>
     <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 </body>
 </html>
