register form html

--- a/TP2/html/logIn.html
+++ b/TP2/html/logIn.html
@@ -1,6 +1,6 @@
 <main class="login-register">
     <img src="" alt="marcaDeAgua">
-    <div id="login">
+    <div class="login">
         <form action="post">
             <div>
                 <input type="username"placeholder="username"></label>
@@ -8,6 +8,7 @@
             <div>
                 <input type="password" placeholder="password"required>
             </div>
+            <button id="login">login</button>
         </form>
     </div>
 </main>
