--- a/TP2/html/home.html
+++ b/TP2/html/home.html
@@ -1,54 +1,57 @@
 <main>
-    <div class="carousel">
-        <div class="card">
-            <img src="producto1.jpg" alt="Producto 1">
-            <div class="card-details">
-                <h3>Producto 1</h3>
-                <div class="card-price">$19.99</div>
-                <button class="add-to-cart">Agregar al Carrito</button>
+    <div class="carousel-container">
+        <div class="carousel">
+            <div class="card">
+                <img src="producto1.jpg" alt="Producto 1">
+                <div class="card-details">
+                    <h3>Producto 1</h3>
+                    <div class="card-price">$19.99</div>
+                    <button class="add-to-cart">Agregar al Carrito</button>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="producto2.jpg" alt="Producto 2">
-            <div class="card-details">
-                <h3>Producto 2</h3>
-                <div class="card-price">$24.99</div>
-                <button class="add-to-cart">Agregar al Carrito</button>
+            <div class="card">
+                <img src="producto2.jpg" alt="Producto 2">
+                <div class="card-details">
+                    <h3>Producto 2</h3>
+                    <div class="card-price">$24.99</div>
+                    <button class="add-to-cart">Agregar al Carrito</button>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="producto2.jpg" alt="Producto 2">
-            <div class="card-details">
-                <h3>Producto 2</h3>
-                <div class="card-price">$24.99</div>
-                <button class="add-to-cart">Agregar al Carrito</button>
+            <div class="card">
+                <img src="producto2.jpg" alt="Producto 2">
+                <div class="card-details">
+                    <h3>Producto 2</h3>
+                    <div class="card-price">$24.99</div>
+                    <button class="add-to-cart">Agregar al Carrito</button>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="producto2.jpg" alt="Producto 2">
-            <div class="card-details">
-                <h3>Producto 2</h3>
-                <div class="card-price">$24.99</div>
-                <button class="add-to-cart">Agregar al Carrito</button>
+            <div class="card">
+                <img src="producto2.jpg" alt="Producto 2">
+                <div class="card-details">
+                    <h3>Producto 2</h3>
+                    <div class="card-price">$24.99</div>
+                    <button class="add-to-cart">Agregar al Carrito</button>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="producto2.jpg" alt="Producto 2">
-            <div class="card-details">
-                <h3>Producto 2</h3>
-                <div class="card-price">$24.99</div>
-                <button class="add-to-cart">Agregar al Carrito</button>
+            <div class="card">
+                <img src="producto2.jpg" alt="Producto 2">
+                <div class="card-details">
+                    <h3>Producto 2</h3>
+                    <div class="card-price">$24.99</div>
+                    <button class="add-to-cart">Agregar al Carrito</button>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="producto2.jpg" alt="Producto 2">
-            <div class="card-details">
-                <h3>Producto 2</h3>
-                <div class="card-price">$24.99</div>
-                <button class="add-to-cart">Agregar al Carrito</button>
+            <div class="card">
+                <img src="producto2.jpg" alt="Producto 2">
+                <div class="card-details">
+                    <h3>Producto 2</h3>
+                    <div class="card-price">$24.99</div>
+                    <button class="add-to-cart">Agregar al Carrito</button>
+                </div>
             </div>
         </div>
     </div>
+
     <div class="gallery">
         <div class="gallery-card">
             <img src="imagen1.jpg" alt="Tarjeta 1">
@@ -196,3 +199,4 @@
         </div>
     </div>
 </main>
+<script defer src="../js/home.js"></script>
