--- a/TP2/html/logIn.html
+++ b/TP2/html/logIn.html
@@ -1,6 +1,39 @@
 <main class="login-register">
     <img src="" alt="marcaDeAgua">
-    <div class="login">
+
+    <div id="registerForm" class="userForm d-none" >
+        <form action="post">
+            <div>
+                <p>Full name</p>
+                <input type="text"placeholder="Username">
+            </div>
+            <div>
+                <p>Nickname</p>
+                <input type="text"placeholder="Nickname">
+            </div>
+            <div>
+                <p>Email</p>
+                <input type="email" placeholder="Email">
+            </div>
+            <div>
+                <p>Edad</p>
+                <input type="text" placeholder="Edad">
+            </div>
+            <div>
+                <p>Password</p>
+                <input type="password" placeholder="Password">
+            </div>
+            <div>
+                <p>Confirm Password</p>
+                <input type="password" placeholder="Confirm password">
+            </div>
+            <button id="register">Registrar</button>
+        </form>
+
+        <button id="showLoginForm">Iniciar Sesion</button>
+    </div>
+
+    <div id="loginForm" class="userForm d-flex">
         <form action="post">
             <div>
                 <input type="username"placeholder="username"></label>
@@ -10,5 +43,7 @@
             </div>
             <button id="login">login</button>
         </form>
+
+        <button id="showRegisterForm">registrarme</button>
     </div>
 </main>
