--- a/TP2/html/logIn.html
+++ b/TP2/html/logIn.html
@@ -27,10 +27,10 @@
                 <p>Confirm Password</p>
                 <input type="password" placeholder="Confirm password">
             </div>
-            <button id="register">Registrar</button>
+            <button id="register" class="button-primary">Registrar</button>
         </form>
 
-        <button id="showLoginForm">Iniciar Sesion</button>
+        <button id="showLoginForm" class="button-secondary">Iniciar Sesion</button>
     </div>
 
     <div id="loginForm" class="userForm d-flex">
@@ -41,9 +41,9 @@
             <div>
                 <input type="password" placeholder="password"required>
             </div>
-            <button id="login">login</button>
+            <button id="login" class="button-primary">login</button>
         </form>
 
-        <button id="showRegisterForm">registrarme</button>
+        <button id="showRegisterForm" class="button-secondary">registrarme</button>
     </div>
 </main>
