--- a/TP2/html/logIn.html
+++ b/TP2/html/logIn.html
@@ -5,7 +5,7 @@
         <form action="post">
             <div>
                 <p>Full name</p>
-                <input type="text"placeholder="Username">
+                <input type="text"placeholder="Full Name">
             </div>
             <div>
                 <p>Nickname</p>
@@ -28,9 +28,9 @@
                 <input type="password" placeholder="Confirm password">
             </div>
             <button id="register" class="button-primary">Registrar</button>
+            <button id="showLoginForm" class="button-secondary">Iniciar Sesion</button>
         </form>
-
-        <button id="showLoginForm" class="button-secondary">Iniciar Sesion</button>
+        
     </div>
 
     <div id="loginForm" class="userForm d-flex">
@@ -42,8 +42,8 @@
                 <input type="password" placeholder="password"required>
             </div>
             <button id="login" class="button-primary">login</button>
+            <button id="showRegisterForm" class="button-secondary">registrarme</button>
         </form>
 
-        <button id="showRegisterForm" class="button-secondary">registrarme</button>
     </div>
 </main>
