--- a/TP2/html/home.html
+++ b/TP2/html/home.html
@@ -2,7 +2,7 @@
     <div class="carousel-container">
         <div class="carousel">
             <div class="card">
-                <img src="producto1.jpg" alt="Producto 1">
+                <img src="../images/games/assesinCreed.jpg" alt="Producto 1">
                 <div class="card-details">
                     <h3>Producto 1</h3>
                     <div class="card-price">$19.99</div>
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="producto2.jpg" alt="Producto 2">
+                <img src="../images/games/battlefield1.jpg" alt="Producto 2">
                 <div class="card-details">
                     <h3>Producto 2</h3>
                     <div class="card-price">$24.99</div>
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="producto2.jpg" alt="Producto 2">
+                <img src="../images/games/bloodborne.jpg" alt="Producto 2">
                 <div class="card-details">
                     <h3>Producto 2</h3>
                     <div class="card-price">$24.99</div>
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="producto2.jpg" alt="Producto 2">
+                <img src="../images/games/callofdutyMW3.jpg" alt="Producto 2">
                 <div class="card-details">
                     <h3>Producto 2</h3>
                     <div class="card-price">$24.99</div>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="producto2.jpg" alt="Producto 2">
+                <img src="../images/games/crash.jpg" alt="Producto 2">
                 <div class="card-details">
                     <h3>Producto 2</h3>
                     <div class="card-price">$24.99</div>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="producto2.jpg" alt="Producto 2">
+                <img src="../images/games/dota.jpg" alt="Producto 2">
                 <div class="card-details">
                     <h3>Producto 2</h3>
                     <div class="card-price">$24.99</div>
@@ -54,145 +54,145 @@
 
     <div class="gallery">
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/zelda.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/theLastOfUs.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/superMario.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/pacMAn.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/mortalKombat.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/monkey.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/metalGear.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/gtaSANANDREAs.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/grandTheft.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/dota.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/crash.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/callofdutyMW3.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/bloodborne.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/battlefield1.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/assesinCreed.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/alphalt8.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/mortalKombat.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/dirtrally2.0.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/superMario.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/forza5.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/blocks.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/nfsnolimits.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen1.jpg" alt="Tarjeta 1">
+            <img src="../images/games/monkey.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
             </div>
         </div>
         <div class="gallery-card">
-            <img src="imagen2.jpg" alt="Tarjeta 2">
+            <img src="../images/games/dirtrally2.0.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
             </div>
