--- a/TP2/html/pdp.html
+++ b/TP2/html/pdp.html
@@ -1,5 +1,5 @@
 <main class="login-register">
-    <div class="container">
+    <div class="pdp-container">
         <div class="left-column">
             <img class="main-image" src="imagen_principal.jpg" alt="Imagen Principal">
             <img class="small-image" src="imagen1.jpg" alt="Imagen 1">
@@ -13,5 +13,15 @@
                 <p>Esta es una descripción detallada del contenido. Puedes agregar cualquier texto o información relevante aquí.</p>
             </div>
         </div>
+    </div>
+    <div class="comentaries-container">
+        <ul>
+            <li class="comentary">
+                <img src="" alt="" id="profile">
+                <p class="Nickname"></p>
+                <p class="time"></p>
+                <p class="text-coment"></p>
+            </li>
+        </ul>
     </div>
 </main>
