--- a/TP2/html/pdp.html
+++ b/TP2/html/pdp.html
@@ -1,11 +1,11 @@
 <main class="login-register">
     <div class="pdp-container">
         <div class="left-column">
-            <img class="main-image" src="imagen_principal.jpg" alt="Imagen Principal">
-            <img class="small-image" src="imagen1.jpg" alt="Imagen 1">
-            <img class="small-image" src="imagen2.jpg" alt="Imagen 2">
-            <img class="small-image" src="imagen3.jpg" alt="Imagen 3">
-            <img class="small-image" src="imagen4.jpg" alt="Imagen 4">
+            <img class="main-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen Principal">
+            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 1">
+            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 2">
+            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 3">
+            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 4">
         </div>
         <div class="right-column">
             <div class="description">
