button to pageGame implemented and bug in register fixed

--- a/TP2/html/pdp.html
+++ b/TP2/html/pdp.html
@@ -12,6 +12,7 @@
                 <h1>Título de la Descripción</h1>
                 <p>Esta es una descripción detallada del contenido. Puedes agregar cualquier texto o información relevante aquí.</p>
             </div>
+            <button id="playDemo" class="button-primary">Play Demo</button>
         </div>
     </div>
     <div class="comentaries-container">
