nav icons, background watermark

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -23,8 +23,8 @@
                 <button class="search-button">Buscar</button>
             </div>
             <div class="navbar-icons">
-                <button class="cart-button">Carrito</button>
-                <button id="loginButton" class="profile-button">Mi Perfil</button>
+                <button id="loginButton" class="profile-button"><i class="fa-regular fa-user" style="color: #f5ecfe;"></i></button>
+                <button class="cart-button"><i class="fa-solid fa-cart-shopping fa-2x" style="color: #f5ecfe;"></i></button>
             </div>
         </nav>
     </header>
