burger butom modified

--- a/TP2/index.html
+++ b/TP2/index.html
@@ -19,70 +19,70 @@
                 <div id="myDropdown" class="dropdown-content">
                     <div class="menu-options-section">
                         <div class="option">
-                            <img src="./icons/menu_icon_1.svg" alt="">
+                            <img src="icons/menu_icon_1.svg" alt="">
                             <p class="h3-baloo">Reciente</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_2.svg" alt="">
+                            <img src="icons/menu_icon_2.svg" alt="">
                             <p class="h3-baloo">Nuevo</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_3.svg" alt="">
+                            <img src="icons/menu_icon_3.svg" alt="">
                             <p class="h3-baloo">Tendencia</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_4.svg" alt="">
+                            <img src="icons/menu_icon_4.svg" alt="">
                             <p class="h3-baloo">Gratis</p>
                         </div>
                     </div>
                     <!----------- Categorias ----------->
                     <div class="menu-options-section">
                         <div class="option">
-                            <img src="./icons/menu_icon_5.svg" alt="">
+                            <img src="icons/menu_icon_5.svg" alt="">
                             <p class="h3-baloo">Básquet</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_6.svg" alt="">
+                            <img src="icons/menu_icon_6.svg" alt="">
                             <p class="h3-baloo">Aventura</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_7.svg" alt="">
+                            <img src="icons/menu_icon_7.svg" alt="">
                             <p class="h3-baloo">Disparos</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_8.svg" alt="">
+                            <img src="icons/menu_icon_8.svg" alt="">
                             <p class="h3-baloo">Acción</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_9.svg" alt="">
+                            <img src="icons/menu_icon_9.svg" alt="">
                             <p class="h3-baloo">Carreras</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_10.svg" alt="">
+                            <img src="icons/menu_icon_10.svg" alt="">
                             <p class="h3-baloo">Cocina</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_5.svg" alt="">
+                            <img src="icons/menu_icon_5.svg" alt="">
                             <p class="h3-baloo">Basketball</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_8.svg" alt="">
+                            <img src="icons/menu_icon_8.svg" alt="">
                             <p class="h3-baloo">Acción</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_6.svg" alt="">
+                            <img src="icons/menu_icon_6.svg" alt="">
                             <p class="h3-baloo">Aventura</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_7.svg" alt="">
+                            <img src="icons/menu_icon_7.svg" alt="">
                             <p class="h3-baloo">Carrera</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_8.svg" alt="">
+                            <img src="icons/menu_icon_8.svg" alt="">
                             <p class="h3-baloo">Cocina</p>
                         </div>
                         <div class="option">
-                            <img src="./icons/menu_icon_9.svg" alt="">
+                            <img src="icons/menu_icon_9.svg" alt="">
                             <p class="h3-baloo">Disparos</p>
                         </div>
                     </div>
