--- a/TP2/index.html
+++ b/TP2/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="dropdown">
-                <button onclick="myFunction()" class="hamburger-button">&#9776;</button>
+                <button class="hamburger-button">&#9776;</button>
                 <div id="myDropdown" class="dropdown-content">
                     <div class="menu-options-section">
                         <div class="option">
