added to cart sign + pdp images

--- a/TP2/html/home.html
+++ b/TP2/html/home.html
@@ -64,7 +64,12 @@
         <div class="gallery-card">
             <img src="../images/games/zelda.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="added">
+                    agregado
+                </div>
+                <h3>Legend of zelda</h3>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -94,6 +99,11 @@
             </div>
         </div>
         <div class="gallery-card">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="added">
+                agregado
+            </div>
             <img src="../images/games/mortalKombat.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
@@ -110,6 +120,11 @@
             </div>
         </div>
         <div class="gallery-card">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="added">
+                agregado
+            </div>
             <img src="../images/games/metalGear.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
                 <h3>Tarjeta 1</h3>
@@ -150,6 +165,11 @@
             </div>
         </div>
         <div class="gallery-card">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="added">
+                agregado
+            </div>
             <img src="../images/games/callofdutyMW3.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
                 <h3>Tarjeta 2</h3>
