--- a/TP2/html/pdp.html
+++ b/TP2/html/pdp.html
@@ -2,10 +2,13 @@
     <div class="pdp-container">
         <div class="left-column">
             <img class="main-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen Principal">
-            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 1">
-            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 2">
-            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 3">
-            <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 4">
+            <div class="images-container">
+                <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 1">
+                <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 2">
+                <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 3">
+                <img class="small-image" src="../images/games/dirtrally2.0.jpg" alt="Imagen 4">
+            </div>
+
         </div>
         <div class="right-column">
             <div class="description">
