--- a/TP2/html/home.html
+++ b/TP2/html/home.html
@@ -8,48 +8,48 @@
                 <div class="card">
                     <img src="../images/games/assesinCreed.jpg" alt="Producto 1">
                     <div class="card-details">
-                        <h3>Producto 1</h3>
-                        <div class="card-price">$19.99</div>
+                        <button class="button-secondary">Assassin's Creed</button>
+                        <div class="card-price">$12.99</div>
                         <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="../images/games/battlefield1.jpg" alt="Producto 2">
                     <div class="card-details">
-                        <h3>Producto 2</h3>
-                        <div class="card-price">$24.99</div>
+                        <button class="button-secondary">Battlefield</button>
+                        <div class="card-price">$4.99</div>
                         <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="../images/games/bloodborne.jpg" alt="Producto 2">
                     <div class="card-details">
-                        <h3>Producto 2</h3>
-                        <div class="card-price">$24.99</div>
+                        <button class="button-secondary">Bloodborne</button>
+                        <div class="card-price">$2.99</div>
                         <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="../images/games/callofdutyMW3.jpg" alt="Producto 2">
                     <div class="card-details">
-                        <h3>Producto 2</h3>
-                        <div class="card-price">$24.99</div>
+                        <button class="button-secondary">Call of Duty MW3</button>
+                        <div class="card-price">$3.99</div>
                         <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="../images/games/crash.jpg" alt="Producto 2">
                     <div class="card-details">
-                        <h3>Producto 2</h3>
-                        <div class="card-price">$24.99</div>
+                        <button class="button-secondary">Crash</button>
+                        <div class="card-price">$26.99</div>
                         <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="../images/games/dota.jpg" alt="Producto 2">
                     <div class="card-details">
-                        <h3>Producto 2</h3>
-                        <div class="card-price">$24.99</div>
+                        <button class="button-secondary">Dota</button>
+                        <div class="card-price">Free</div>
                         <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="added">
                     agregado
                 </div>
-                <h3>Legend of zelda</h3>
+                <button class="button-secondary">Legend of zelda</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -77,7 +77,7 @@
         <div class="gallery-card">
             <img src="../images/games/theLastOfUs.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">The Last Of Us</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -85,7 +85,7 @@
         <div class="gallery-card">
             <img src="../images/games/superMario.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Super Mario</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -93,7 +93,7 @@
         <div class="gallery-card">
             <img src="../images/games/pacMAn.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Pacman</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -106,7 +106,7 @@
             </div>
             <img src="../images/games/mortalKombat.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Mortal kombat</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -114,7 +114,7 @@
         <div class="gallery-card">
             <img src="../images/games/monkey.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Monkey</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -127,7 +127,7 @@
             </div>
             <img src="../images/games/metalGear.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Metalgear</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -135,7 +135,7 @@
         <div class="gallery-card">
             <img src="../images/games/gtaSANANDREAs.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Grand Theft Auto S.A</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -143,7 +143,7 @@
         <div class="gallery-card">
             <img src="../images/games/grandTheft.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Grand Theft Auto</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -151,7 +151,7 @@
         <div class="gallery-card">
             <img src="../images/games/dota.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Dota</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -159,7 +159,7 @@
         <div class="gallery-card">
             <img src="../images/games/crash.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Crash</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -172,7 +172,7 @@
             </div>
             <img src="../images/games/callofdutyMW3.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Call of Duty MW3</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -180,7 +180,7 @@
         <div class="gallery-card">
             <img src="../images/games/bloodborne.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Bloodborne</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -188,7 +188,7 @@
         <div class="gallery-card">
             <img src="../images/games/battlefield1.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Battlefield</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -196,7 +196,7 @@
         <div class="gallery-card">
             <img src="../images/games/assesinCreed.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Assassin's Creed</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -204,7 +204,7 @@
         <div class="gallery-card">
             <img src="../images/games/alphalt8.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Asphalt 8</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -212,7 +212,7 @@
         <div class="gallery-card">
             <img src="../images/games/mortalKombat.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Mortal Kombat</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -220,7 +220,7 @@
         <div class="gallery-card">
             <img src="../images/games/dirtrally2.0.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Dirt Rally 2.0</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -228,7 +228,7 @@
         <div class="gallery-card">
             <img src="../images/games/superMario.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Super Mario</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -236,7 +236,7 @@
         <div class="gallery-card">
             <img src="../images/games/forza5.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Forza 5</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -244,7 +244,7 @@
         <div class="gallery-card">
             <img src="../images/games/blocks.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Blocks</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -252,7 +252,7 @@
         <div class="gallery-card">
             <img src="../images/games/nfsnolimits.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">NFS No Limits</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -260,7 +260,7 @@
         <div class="gallery-card">
             <img src="../images/games/monkey.jpg" alt="Tarjeta 1">
             <div class="gallery-card-details">
-                <h3>Tarjeta 1</h3>
+                <button class="button-secondary">Monkey</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
@@ -268,7 +268,7 @@
         <div class="gallery-card">
             <img src="../images/games/dirtrally2.0.jpg" alt="Tarjeta 2">
             <div class="gallery-card-details">
-                <h3>Tarjeta 2</h3>
+                <button class="button-secondary">Dirt Rally 2.0</button>
                 <div class="card-price">$12.00</div>
                 <button class="addCart"><i class="fa-solid fa-cart-plus fa-2x"></i></button>
             </div>
