--- a/TP2/index.html
+++ b/TP2/index.html
@@ -92,6 +92,8 @@
                     <img src="icons/logo.svg" alt="">
                 </div>
             </div>
+            <ul id="breadcrumbs">
+            </ul>
             <div class="navbar-search">
                     <input type="text" placeholder="Buscar...">
                 <img src="icons/search.svg" class="search-button" alt="search"/>
