cards mobile styles

--- a/TP2/html/home.html
+++ b/TP2/html/home.html
@@ -3,7 +3,7 @@
         <div id="arrow-left">
             <i class="fa-solid fa-chevron-left fa-2x" style="color: #ebe1fe;"></i> 
         </div>
-        <div style="overflow: hidden;">
+        <div class="carousel-card-container">
             <div class="carousel" data-scroll="0">
                 <div class="card">
                     <img src="../images/games/assesinCreed.jpg" alt="Producto 1">
