--- a/TP2/html/logIn.html
+++ b/TP2/html/logIn.html
@@ -47,7 +47,13 @@
             </div>
             <div>
                 <button id="login" class="button-primary">login</button>
-                <button id="showRegisterForm" class="button-secondary">registrarme</button>
+                <img src="../icons/googleColor.svg" alt="">
+                <img src="../icons/facebookColor.svg" alt="">
+                <p>or</p>
+                <button id="showRegisterForm" class="button-secondary">Create Acount</button>
+            </div>
+            <div>
+
             </div>
 
         </form>
